Basic working auth with nextjs
